<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wxs_msgs</name>
  <version>0.3.0</version>
  <description>A message package containing wxs data related message and service definitions.</description>
  <maintainer email="gyudong.han@wayties.com">Gyu-Dong Han</maintainer>
  <license>Apache License 2.0</license>
  <author>Steve Kwon</author>
  <author>Gyu-Dong Han</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
