<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>facx_v2x_ind_app</name>
  <version>0.3.0</version>
  <description>Example of FacxV2xInd ROS2 for WXS</description>
  <maintainer email="gyudong.han@wayties.com">Gyu-Dong Han</maintainer>
  <license>Apache License 2.0</license>
  <author>Steve Kwon</author>
  <author>Gyu-Dong Han</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>wxs_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>wxs_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
